--- a/WpfApplication1/App.xaml
+++ b/WpfApplication1/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WpfApplication1.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="WindowRangeSlider.xaml">
+             StartupUri="WindowThread.xaml">
     <Application.Resources>
          
     </Application.Resources>
