--- a/3DBackendService/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/3DBackendService/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using _3DBackendService.Areas.HelpPage.Models
+@using BackendService.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
