--- a/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using _3DBackendService.Areas.HelpPage.ModelDescriptions
+@using BackendService.Areas.HelpPage.ModelDescriptions
 @model ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
