--- a/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using _3DBackendService.Areas.HelpPage
+@using BackendService.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
