--- a/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using _3DBackendService.Areas.HelpPage
-@using _3DBackendService.Areas.HelpPage.Models
+@using BackendService.Areas.HelpPage
+@using BackendService.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
