--- a/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using _3DBackendService.Areas.HelpPage.Models
-@using _3DBackendService.Areas.HelpPage.ModelDescriptions
+@using BackendService.Areas.HelpPage.Models
+@using BackendService.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
