--- a/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
+++ b/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
@@ -1,4 +1,4 @@
-@using _3DBackendService.Areas.HelpPage.ModelDescriptions
+@using BackendService.Areas.HelpPage.ModelDescriptions
 @model Type
 @{
     ModelDescription modelDescription = ViewBag.modelDescription;
