--- a/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/3DBackendService/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using _3DBackendService.Areas.HelpPage.ModelDescriptions
+@using BackendService.Areas.HelpPage.ModelDescriptions
 @model SimpleTypeModelDescription
 @Model.Documentation
