--- a/3DBackendService/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/3DBackendService/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using _3DBackendService.Areas.HelpPage.ModelDescriptions
+@using BackendService.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
